# blog

./: .gitignore  BLOG_FRONTEND_COMPLETE.md  CODE_AUDIT_REPORT.md  DEPLOYMENT_GUIDE.md  FRONTEND_BACKEND_INTEGRATION.md  PERFORMANCE_OPTIMIZATION_SUMMARY.md  PROJECT_COMPLETION_SUMMARY.md  PROJECT_DOCUMENTATION_INDEX.md  QUICK_START_GUIDE.md  STARTUP_TROUBLESHOOTING.md  TESTING_CHECKLIST.md  Windows启动说明.txt  development-journey-blog.md  fix_build_tools.md  next.config.js  nginx.conf.example  package-lock.json  package.json  quick_fix.bat  start_backend.bat  start_frontend.bat  start_project.bat  start_project.ps1  start_project.sh  tailwind.config.js  弗洛伊德干货贴列表.md
.cunzhi-memory/: context.md  metadata.json  patterns.md  preferences.md  rules.md
.github/: DEPLOYMENT.md
.github/workflows/: deploy.yml
backend/: .env.example  API_DOCUMENTATION.docx  API_DOCUMENTATION.md  COMPILATION_FIX_SUMMARY.md  Cargo.toml  PRODUCTION_DEPLOYMENT_GUIDE.md  SETUP_GUIDE.md  blog-backend.service  blog.db  build.rs  config.toml  deploy.sh
backend/.cargo/: config.toml
backend/data/: blog.db
backend/migrations/: 001_initial.sql  002_add_about.sql  003_add_pdf.sql  004_add_webauthn.sql
backend/src/: DevDoc.md  main.rs
backend/src/config/: mod.rs  settings.rs
backend/src/database/: blog_repository.rs  chat_repository.rs  connection.rs  mod.rs  user_repository.rs
backend/src/database/repositories/: category_repository.rs  download_repository.rs  mod.rs  music_repository.rs  post_repository.rs  tag_repository.rs
backend/src/handlers/: about_handler.rs  admin.rs  auth.rs  blog.rs  category_handler.rs  chat.rs  download_handler.rs  health.rs  health_handler.rs  mail_handler.rs  mod.rs  music_handler.rs  pdf_handler.rs  post_handler.rs  quant_handler.rs  resource_handler.rs  rss_handler.rs  seo_handler.rs  tag_handler.rs  tools_handler.rs  upload_handler.rs  webauthn_handler.rs
backend/src/middleware/: auth.rs  cors.rs  logging.rs  mod.rs
backend/src/models/: about.rs  blog_post.rs  category.rs  chat.rs  download.rs  mod.rs  music.rs  pdf.rs  post.rs  response.rs  tag.rs  user.rs
backend/src/routes/: mod.rs
backend/src/services/: about_service.rs  ai_service.rs  auth_service.rs  blog_service.rs  category_service.rs  chat_service.rs  download_service.rs  mod.rs  music_service.rs  pdf_service.rs  post_service.rs  resource_service.rs  tag_service.rs  webauthn_service.rs
backend/src/utils/: auth.rs  error.rs  file_handler.rs  markdown.rs  mod.rs  response.rs  slug.rs  text.rs  validation.rs
backend/tests/: logic_fixes_test.rs
backend/tools/gitbook2epub/: README.md  gitbook2epub.py  render_worker.py
doc/: post001.md
front/: .gitignore  MATERIAL_DESIGN_3_BLOG_SUMMARY.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.app.json  vite.config.ts
front/src/: App.css  App.tsx  index.css  main.tsx  material-web.ts
front/src/components/: ActivityChart.tsx  ArchiveList.tsx  BlogCard.tsx  Dock.tsx  HoverList.tsx  MailReader.tsx  Markdown.tsx  ThemeToggle.tsx  dashboard.tsx
front/src/hooks/: useBlogData.ts  useResponsive.ts
front/src/lib/: theme.tsx
front/src/pages/: About.tsx  ArticleDetail.tsx  Articles.tsx  Contact.tsx  Home.tsx  NotFound.tsx  Projects.tsx
front/src/router/: AppRouter.tsx
front/src/services/: admin.ts  api.ts  github.ts  mail.ts  quant.ts
front/src/styles/: global.css  page-placeholder.css  theme.css
front/src/types/: blog.ts
frontend/: .env.example  API_DOCUMENTATION.md  CATEGORIES_TAGS_IMPLEMENTATION.md  CONVERSION_SUMMARY.md  HOVER_MENU_IMPLEMENTATION.md  HOVER_MENU_IMPROVEMENTS.md  PERFORMANCE_OPTIMIZATION_FINAL_REPORT.md  PERFORMANCE_OPTIMIZATION_REPORT.md  PROJECT_FINAL_COMPLETION_SUMMARY.md  REFACTORING_SUMMARY.md  SEARCH_REMOVAL.md  STYLE_FIXES.md  api-test.md  build.sh  debug-build.js  eslint.config.js.bak  final-build.sh  index.html  package-lock.json  package.json  tailwind.config.js  test-build.mjs  tsconfig.app.json  vite.config.ts
frontend-legacy/: README.md  components.json  cyrus-blog-new.lnk  hero.ts  index.html  package.json  tsconfig.app.json  vite.config.ts
frontend-legacy/src/: App.css  index.css  main.tsx  material-web.ts
frontend-legacy/src/contexts/: AuthContext.tsx  NotificationContext.tsx
frontend-legacy/src/hooks/: useForm.ts  useIsMobile.ts
frontend-legacy/src/router/: AppRouter.tsx
frontend-legacy/src/services/: api.ts  sitemap.ts  storage.ts
frontend-legacy/src/styles/: global.css  mobile.css  responsive.css  shadcn.css  theme.css
frontend-legacy/src/utils/: adminPreload.ts  cacheManager.ts  index.ts
frontend-new/: vite.config.ts
frontend-new/src/services/: api.ts
frontend/frontend/: index.html
frontend/frontend/assets/: AboutManagement-D_B0uZQJ.js  AboutPage-BWi1lKgJ.css  AboutPage-sFCyi0KQ.js  AdminLayout-D2tQUPMO.css  AdminLayout-DBr5zY72.js  ArticleCard-8oAlXAIq.js  ArticleCard-DYcYF5BR.css  ArticleDetail-BH-d7yaw.js  ArticleDetail-BYkiP_Ps.css  ArticlesPage-DkT3AaMn.css  ArticlesPage-caUheEf5.js  (+36 more)
frontend/public/: robots.txt  site.webmanifest  sitemap.xml
frontend/scripts/: convert-images.js
frontend/src/: App.tsx  index.css  main.tsx  material-web.ts
src/: middleware.ts
src/app/: HomeClient.tsx  globals.css  layout.tsx  page.tsx
src/components/: ChatAssistant.tsx  ConditionalFooter.tsx  Footer.tsx  Header.tsx  PageTransition.tsx  SearchModal.tsx  ThemeToggle.tsx
src/context/: ChatContext.tsx  ThemeContext.tsx
src/lib/: ai-templates.ts  blog-admin-server.ts  blog-admin.ts  blog-server.ts  blog-types.ts  blog.ts  deepseek-api.ts  markdown-processor.ts  markdown-server.ts
(+428 files in other folders)
