[package]
name = "chuyi-uk-back"
version = "0.1.0"
edition = "2021"
authors = ["Chuyi <chuyi@chuyi.uk>"]
description = "High-performance Rust backend for Chuyi Blog with advanced caching, monitoring, and security"
license = "MIT"
repository = "https://github.com/chuyi/blog"
keywords = ["blog", "api", "rust", "axum", "sqlite"]
categories = ["web-programming"]
build = "build.rs"

[profile.release]
# Optimize for performance and size
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
# Faster compilation in development
opt-level = 0
debug = true
incremental = true

[dependencies]
# Web framework
axum = { version = "0.7", features = ["http2"] }
axum-extra = { version = "0.9", features = ["typed-header", "multipart"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "fs", "trace", "compression-gzip", "compression-br"] }
hyper = { version = "1.0", features = ["full", "http2"] }
tokio = { version = "1.0", features = ["full"] }
tokio-util = { version = "0.7", features = ["io"] }

# Database
sqlx = { version = "0.7", features = [
    "runtime-tokio-rustls",
    "sqlite",
    "chrono",
    "uuid",
] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Async traits
async-trait = "0.1"

# File handling
mime_guess = "2.0"

# Image processing
image = { version = "0.24", default-features = false, features = ["jpeg", "png", "gif", "webp"] }
webp = "0.3"

# Authentication & Security
jsonwebtoken = "9.2"
bcrypt = "0.15"

# Configuration
config = "0.14"
dotenvy = "0.15"

# Logging & Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Markdown processing
pulldown-cmark = "0.10"

# Date/Time
chrono = { version = "0.4", features = ["serde"] }

# UUID
uuid = { version = "1.6", features = ["v4", "serde"] }

# Random number generation
rand = "0.8"

# HTTP client for AI API
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# S3-compatible object storage (Cloudflare R2) — uses reqwest directly, no heavy SDK
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
urlencoding = "2"

# Vendored OpenSSL for cross-compilation (needed by webauthn-rs)
openssl = { version = "0.10", features = ["vendored"] }

# WebAuthn authentication
webauthn-rs = { version = "0.5", features = ["danger-allow-state-serialisation"] }
webauthn-rs-proto = "0.5"
url = "2"
base64url = "0.1"

# Utilities
slug = "0.1"
regex = "1.10"
num_cpus = "1.16"
sysinfo = "0.30"

# Performance monitoring
metrics = "0.21"
metrics-exporter-prometheus = "0.12"

# Memory management (optional)
mimalloc = { version = "0.1", default-features = false, optional = true }

[build-dependencies]
chrono = { version = "0.4", features = ["serde"] }

[features]
default = ["mimalloc"]
# Enable performance optimizations
performance = ["mimalloc"]
# Enable development features
development = []
# Enable production features
production = ["performance"]
